Fix post gradients, aligned text updated imports

--- a/css/post-style.css
+++ b/css/post-style.css
@@ -161,6 +161,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 }
 
 .box-1 a,
@@ -253,5 +254,15 @@ footer {
 @media (min-width: 500px) {
   main {
     grid-template-columns: 1fr;
+  }
+  nav li {
+    padding: 15px;
+    font-size: 16px;
+  }
+  header h1 {
+    font-size: 2.5rem;
+  }
+  header h2 {
+    font-size: 1.2rem;
   }
 }
