--- a/css/style.css
+++ b/css/style.css
@@ -120,39 +120,38 @@ header h2 {
 
 .photo-cred {
   font-size: 17px;
-  font-weight: 500;
+  font-weight: 600;
   color: rgb(235, 235, 235);
-  text-shadow: 2px 2px rgb(0, 0, 0);
+  text-shadow: 1px 1px rgb(0, 0, 0);
 }
 
-/* First Post */
+/**** Blog Post Cards ****/
 
 .blog-post {
   position: relative;
   overflow: hidden;
   margin-top: 30px;
+  padding: 0;
   max-height: 500px;
-  box-sizing: border-box;
-  box-shadow: 0 2px 10px #ccc;
 }
 
 .post-content {
   position: absolute;
   left: 0;
   bottom: 0;
+  padding: 0;
   width: 100%;
   color: #fff;
-  background: rgb(0, 19, 36);
   background: linear-gradient(
     0deg,
-    rgba(0, 19, 36, 0.7) 10%,
+    rgba(0, 19, 36, 1) 25%,
     rgba(100, 210, 249, 0) 100%
   );
 }
 
 .post-content h2,
 .post-content p {
-  text-shadow: 2px 2px #333;
+  text-shadow: 1px 1px rgb(10, 10, 10);
 }
 
 .post-content a {
@@ -160,44 +159,6 @@ header h2 {
 }
 
 .post-content a:visited {
-  color: #ccc;
-}
-
-/* Second Post */
-
-.blog-post-2 {
-  position: relative;
-  overflow: hidden;
-  margin-top: 60px;
-  max-height: 500px;
-  box-sizing: border-box;
-  box-shadow: 0 2px 10px #ccc;
-}
-
-.post-content-2 {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  color: #fff;
-  background: rgb(0, 19, 36);
-  background: linear-gradient(
-    0deg,
-    rgba(0, 19, 36, 0.7) 10%,
-    rgba(100, 210, 249, 0) 100%
-  );
-}
-
-.post-content-2 h2,
-.post-content-2 p {
-  text-shadow: 2px 2px #333;
-}
-
-.post-content-2 a {
-  color: #fff;
-}
-
-.post-content-2 a:visited {
   color: #ccc;
 }
 
@@ -228,6 +189,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 }
 
 .box-1 a,
@@ -296,6 +258,9 @@ footer {
     grid-template-columns: 1fr;
     grid-gap: 20px;
   }
+  .post-content {
+    bottom: 0;
+  }
 }
 
 @media (max-width: 700px) {
@@ -315,10 +280,23 @@ footer {
   .box-2 {
     order: 1;
   }
+  .post-content {
+    bottom: 0;
+  }
 }
 
 @media (min-width: 500px) {
   main {
     grid-template-columns: 1fr;
+  }
+  nav li {
+    padding: 15px;
+    font-size: 16px;
+  }
+  header h1 {
+    font-size: 2.5rem;
+  }
+  header h2 {
+    font-size: 1.2rem;
   }
 }
